[project]
name = "noloop-backend"
version = "0.0.1"
description = "NoLoop backend — FastAPI API (auth, tenancy, claims) on SQLAlchemy + Supabase Postgres."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "cuid>=0.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
